--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,15 @@
         <activity android:name=".MainActivity"/>
         <activity android:name=".StarPatternActivity" />
         <activity android:name=".MainMenu" >
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".CompassHandler" />
+
+
     </application>
 
 </manifest>
