--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.charlie.practicaandroid">
+    package="com.example.charlie.GhostlyRunes">
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
@@ -10,16 +10,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".StarPatternActivity" />
-        <activity android:name=".MainMenu" >
+        <activity android:name="com.example.charlie.GhostlyRunes.MainActivity"/>
+        <activity android:name="com.example.charlie.GhostlyRunes.StarPatternActivity" />
+        <activity android:name="com.example.charlie.GhostlyRunes.MainMenu" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CompassHandler" />
+        <activity android:name="com.example.charlie.GhostlyRunes.CompassHandler" />
 
 
     </application>
