--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
         android:theme="@style/AppTheme">
         <activity android:name="com.GhostlyRunes.MainActivity"/>
         <activity android:name="com.GhostlyRunes.StarPatternActivity" />
-        <activity android:name="com.GhostlyRunes.CompassHandler" />
+        <activity android:name="com.GhostlyRunes.CompassActivity" />
         <activity android:name="com.GhostlyRunes.ZigZagPatternActivity" />
-        <activity android:name="com.GhostlyRunes.GyroHandler" />
+        <activity android:name="com.GhostlyRunes.GyroActivity" />
         <activity android:name="com.GhostlyRunes.MainMenu" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
