--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,21 +10,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.GhostlyRunes.MainActivity"/>
-        <activity android:name="com.GhostlyRunes.StarPatternActivity" />
-        <activity android:name="com.GhostlyRunes.CompassActivity" />
-        <activity android:name="com.GhostlyRunes.ZigZagPatternActivity" />
-        <activity android:name="com.GhostlyRunes.GyroActivity" />
-        <activity android:name="com.GhostlyRunes.MainMenu" >
+        <activity android:name=".MainActivity" />
+        <activity android:name=".StarPatternActivity" />
+        <activity android:name=".CompassActivity" />
+        <activity android:name=".ZigZagPatternActivity" />
+        <activity android:name=".GyroActivity" />
+        <activity android:name=".MainMenu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
+        <activity android:name=".SemiCirclePatternActivity"></activity>
     </application>
 
 </manifest>
